fixing search not showing up on mobile when flag is presently hidding

--- a/assets/scss/components/stencil/navUser/_navUser.scss
+++ b/assets/scss/components/stencil/navUser/_navUser.scss
@@ -141,6 +141,19 @@
     text-decoration: none;
 }
 
+#igFlag + .navUser-item {
+    display: block;
+    position: absolute;
+    left: 60px;
+    top: 2px;
+
+    @include breakpoint("small") {
+        position: relative;
+        left: 0;
+        top: 0;
+    }
+}
+
 .navUser-item {
     display: none;
 
@@ -148,8 +161,7 @@
         display: block;
     }
 
-    &:first-child,
-    #igFlag + .navUser-item {
+    &:first-child {
         display: block;
         position: absolute;
         left: 60px;
